Feat: adding responsivity to about section

--- a/views/home2.html
+++ b/views/home2.html
@@ -9,7 +9,8 @@
 	<link rel="stylesheet" href="/css/home.style.css">
 	<link rel="stylesheet" href="/css/navigation.style.css">
 	<link rel="stylesheet" href="/css/videoSection.style.css">
-	<link rel="stylesheet" href="/css/section.2.style.css">
+	<link rel="stylesheet" href="/css/aboutCards.style.css">
+	<link rel="stylesheet" href="/css/aboutSection.style.css">
 	<link rel="stylesheet" href="/css/section.3.style.css">
 	<link rel="stylesheet" href="/css/section.4.style.css">
 	<link rel="stylesheet" href="/css/section.5.style.css">
@@ -62,6 +63,43 @@
 				<p class="p">Nossa proposta é através da empatia cuidar do presente, valorizar a história e as memórias,
 					e respeitar as futuras gerações.</p>
 				<a class="video-section-button">Conheça nossos projetos</a>
+			</div>
+		</div>
+	</section>
+
+	<!-- About Section -->
+	<section class="sections" id="essence">
+		<div class="about-section-content-wrapper">
+			<div class="about-section-title-container">
+				<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
+			</div>
+
+			<div class="about-section-detail-container">
+				<div class="about-section-card-container">
+					<div class="about-section-card">
+						<img src="../images/partners.jpg" alt="Natasha e Hugo">
+					</div>
+
+					<div class="about-section-card">
+						<h3 class="h3">Natasha M. Yamamoto</h3>
+						<img src="../images/character_Natasha.jpg" alt="Natasha Michiko">
+					</div>
+
+					<div class="about-section-card">
+						<img src="../images/character_Hugo.jpg" alt="Hugo Wegner">
+						<h3 class="h3">Hugo W. de Moura Nessler</h3>
+					</div>
+				</div>
+
+				<div class="about-section-text-box">
+					<h3 class="h3">Nossa essência</h3>
+					<p class="p">Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em
+						influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande influência
+						nesse processo. Visto isso, nosso escritório deseja oferecer através do design biofílico,
+						soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada
+						indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar, através
+						da sustentabilidade e tecnologia.</p>
+				</div>
 			</div>
 		</div>
 	</section>
