--- a/css/aboutCards.style.css
+++ b/css/aboutCards.style.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     align-items: center;
 
-    width: 50%;
+    width: min(50%, 350px);
     margin: 10px;
 }
 
@@ -46,7 +46,7 @@
     }
 }
 
-@media (min-width: 280px) and (min-height: 768px) {
+@media (min-width: 320px) and (min-height: 600px) {
     .about-section-card:nth-child(1) {
         display: none;
     }
@@ -63,27 +63,32 @@
     .about-section-card:nth-child(3) img {
         box-shadow: 15px 15px 0px 0px #4e6982;
     }
-}
 
-/* Responsive design for screens equal or larger than 768px */
-/* @media (min-width: 768px) {
     .about-section-card img {
-        height: 220px;
-        width: 220px;
+        height: 165px;
+        width: 130px;
     }
 }
 
-@media (min-width: 1024px) {
+/* Responsive design for screens equal or larger than 768px */
+@media (min-width: 768px) and (min-height: 480px) {
+    .about-section-card img {
+        height: 200px;
+        width: 165px;
+    }
+}
+
+@media (min-width: 1024px) and (min-height: 640px) {
     .about-section-card img {
         height: 275px;
         width: 225px;
     }
-} */
+}
 
 /* Responsive design for screens equal or larger than 1536px */
-/* @media (min-width: 1536px) {
+@media (min-width: 1536px) and (min-height: 768px) {
     .about-section-card img {
         height: 400px;
         width: 300px;
     }
-} */
+}
