--- a/views/home2.html
+++ b/views/home2.html
@@ -51,58 +51,63 @@
 		</nav>
 	</header>
 
-	<!-- Video Section -->
-	<section class="sections" id="#">
-		<div class="video-section-content-wrapper">
-			<video class="video-section-background-video" autoplay loop muted plays-inline>
-				<source src="" type="video/mp4">
-			</video>
+	<div class="sections-container">
+		<!-- Video Section -->
+		<section class="sections" id="video">
+			<div class="video-section-content-wrapper">
+				<video class="video-section-background-video" autoplay loop muted plays-inline>
+					<source src="" type="video/mp4">
+				</video>
 
-			<div class="video-section-text-box">
-				<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
-				<p class="p">Nossa proposta é através da empatia cuidar do presente, valorizar a história e as memórias,
-					e respeitar as futuras gerações.</p>
-				<a class="video-section-button">Conheça nossos projetos</a>
-			</div>
-		</div>
-	</section>
-
-	<!-- About Section -->
-	<section class="sections" id="essence">
-		<div class="about-section-content-wrapper">
-			<div class="about-section-title-container">
-				<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
-			</div>
-
-			<div class="about-section-detail-container">
-				<div class="about-section-card-container">
-					<div class="about-section-card">
-						<img src="../images/partners.jpg" alt="Natasha e Hugo">
-					</div>
-
-					<div class="about-section-card">
-						<h3 class="h3">Natasha M. Yamamoto</h3>
-						<img src="../images/character_Natasha.jpg" alt="Natasha Michiko">
-					</div>
-
-					<div class="about-section-card">
-						<img src="../images/character_Hugo.jpg" alt="Hugo Wegner">
-						<h3 class="h3">Hugo W. de Moura Nessler</h3>
-					</div>
-				</div>
-
-				<div class="about-section-text-box">
-					<h3 class="h3">Nossa essência</h3>
-					<p class="p">Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em
-						influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande influência
-						nesse processo. Visto isso, nosso escritório deseja oferecer através do design biofílico,
-						soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada
-						indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar, através
-						da sustentabilidade e tecnologia.</p>
+				<div class="video-section-text-box">
+					<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
+					<p class="p">Nossa proposta é através da empatia cuidar do presente, valorizar a história e as
+						memórias,
+						e respeitar as futuras gerações.</p>
+					<a class="video-section-button">Conheça nossos projetos</a>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+
+		<!-- About Section -->
+		<section class="sections" id="essence">
+			<div class="about-section-content-wrapper">
+				<div class="about-section-title-container">
+					<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
+				</div>
+
+				<div class="about-section-detail-container">
+					<div class="about-section-card-container">
+						<div class="about-section-card">
+							<img src="../images/partners.jpg" alt="Natasha e Hugo">
+						</div>
+
+						<div class="about-section-card">
+							<h3 class="h3">Natasha M. Yamamoto</h3>
+							<img src="../images/character_Natasha.jpg" alt="Natasha Michiko">
+						</div>
+
+						<div class="about-section-card">
+							<img src="../images/character_Hugo.jpg" alt="Hugo Wegner">
+							<h3 class="h3">Hugo W. de Moura Nessler</h3>
+						</div>
+					</div>
+
+					<div class="about-section-text-box">
+						<h3 class="h3">Nossa essência</h3>
+						<p class="p">Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em
+							influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande
+							influência
+							nesse processo. Visto isso, nosso escritório deseja oferecer através do design biofílico,
+							soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada
+							indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar,
+							através
+							da sustentabilidade e tecnologia.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
 
 	<script src="/js/app.js"></script>
 </body>
