--- a/views/home2.html
+++ b/views/home2.html
@@ -37,7 +37,7 @@
 					<a href="#services" class="navbar-menu-link">Serviços</a>
 				</li>
 				<li class="navbar-menu-item">
-					<a href="#section-03" class="navbar-menu-link">Projetos</a>
+					<a href="#values-section" class="navbar-menu-link">Projetos</a>
 				</li>
 				<li class="navbar-menu-item">
 					<a class="navbar-menu-link">Social</a>
@@ -105,6 +105,42 @@
 							da sustentabilidade e tecnologia.</p>
 					</div>
 				</div>
+			</div>
+		</section>
+
+		<!-- Section 03 -->
+		<section class="sections">
+			<div class="values-section-content-wrapper">
+				<img class="values-section-bamboo" src="/images/outros/bambu_1.png" alt="bambu">
+
+				<div class="values-section-text-box">
+					<h2 class="h2">Nossos valores...</h2>
+					<div class="values-section-text-box-item">
+						<h3 class="h3">Empatia, cuidado e consideração - <span>omoiyari.</span></h3>
+						<p class="p">Cuidar do presente, das pessoas e de sí mesmo, preservar a vida, criar conexões,
+							valorizar as origens e respeitar as futuras gerações.</p>
+					</div>
+					<div class="values-section-text-box-item">
+						<h3 class="h3">Emendar com ouro - <span>kintsugi.</span></h3>
+						<p class="p">Errar é humano. Nossa missão é ressignificar o erro em aprendizado, permitindo a
+							evolução contínua como pessoas e profissionais.</p>
+					</div>
+					<div class="values-section-text-box-item">
+						<h3 class="h3">Gratidão - <span>kansha.</span></h3>
+						<p class="p">Pelas pessoas, pelas oportunidades, pelo trabalho, pela natureza e pela vida.</p>
+					</div>
+					<div class="values-section-text-box-item">
+						<h3 class="h3">Faça o melhor que puder e nunca desista - <span>ganbatte.</span></h3>
+						<p class="p">Seja como o bambu, flexível, e sustente-se nas suas raízes nos momentos de
+							adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em
+							direção ao céu.</p>
+					</div>
+				</div>
+
+				<img class="values-section-kanjis" src="../images/outros/omoiyari.png" alt="omoiyari">
+				<img class="values-section-kanjis" src="../images/outros/kansha.png" alt="kansha">
+				<img class="values-section-kanjis" src="../images/outros/kintsugi.png" alt="kintsugi">
+				<img class="values-section-kanjis" src="../images/outros/ganbatte.png" alt="ganbatte">
 			</div>
 		</section>
 	</div>
