--- a/css/section.3.style.css
+++ b/css/section.3.style.css
@@ -7,6 +7,7 @@
 
     height: 100%;
     width: 100%;
+    padding: 10px;
 
     background-image: url(/images/background_granulado.png);
     background-size: cover;
@@ -35,7 +36,6 @@
 
     height: 100%;
     width: min(100%, 1000px);
-    padding: 0px 20px;
     margin-inline: auto;
 
     color: var(--values-section-text-box-color);
