--- a/css/section.3.style.css
+++ b/css/section.3.style.css
@@ -25,10 +25,13 @@
     height: min(100%, 800px);
     width: min(35%, 500px);
     border: solid 1px red;
+    opacity: 0.7;
+    z-index: 1;
 }
 
 /*----------------- Text ---------------------------*/
 .values-section-text-box {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -40,6 +43,7 @@
 
     color: var(--values-section-text-box-color);
     text-align: justify;
+    z-index: 2;
 }
 
 .values-section-text-box h2 {
@@ -58,6 +62,8 @@
     position: absolute;
     height: 140px;
     width: 40px;
+    opacity: 0.7;
+    z-index: 1;
 }
 
 .values-section-kanjis:nth-of-type(5) {
@@ -87,7 +93,15 @@
 }
 
 /* Responsive design for screens equal or larger than 768px */
-@media (min-width: 768px) {}
+@media (min-width: 1024px) {
+    .values-section-bamboo {
+        display: block;
+    }
+
+    .values-section-kanjis {
+        display: block;
+    }
+}
 
 /* Responsive design for screens equal or larger than 1024px */
 /* @media (min-width: 1024px) {
