--- a/views/home2.html
+++ b/views/home2.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="/css/videoSection.style.css">
 	<link rel="stylesheet" href="/css/aboutCards.style.css">
 	<link rel="stylesheet" href="/css/aboutSection.style.css">
-	<link rel="stylesheet" href="/css/section.3.style.css">
+	<link rel="stylesheet" href="/css/valuesSection.style.css">
 	<link rel="stylesheet" href="/css/section.4.style.css">
 	<link rel="stylesheet" href="/css/section.5.style.css">
 </head>
@@ -116,21 +116,25 @@
 				<div class="values-section-text-box">
 					<h2 class="h2">Nossos valores...</h2>
 					<div class="values-section-text-box-item">
-						<h3 class="h3">Empatia, cuidado e consideração - <span>omoiyari.</span></h3>
+						<h3 class="h3">Empatia, cuidado e consideração - <span
+								style="font-style: italic; font-weight: 600;">omoiyari.</span></h3>
 						<p class="p">Cuidar do presente, das pessoas e de sí mesmo, preservar a vida, criar conexões,
 							valorizar as origens e respeitar as futuras gerações.</p>
 					</div>
 					<div class="values-section-text-box-item">
-						<h3 class="h3">Emendar com ouro - <span>kintsugi.</span></h3>
+						<h3 class="h3">Emendar com ouro - <span
+								style="font-style: italic; font-weight: 600;">kintsugi.</span></h3>
 						<p class="p">Errar é humano. Nossa missão é ressignificar o erro em aprendizado, permitindo a
 							evolução contínua como pessoas e profissionais.</p>
 					</div>
 					<div class="values-section-text-box-item">
-						<h3 class="h3">Gratidão - <span>kansha.</span></h3>
+						<h3 class="h3">Gratidão - <span>kansha.</span style="font-style: italic; font-weight: 600;">
+						</h3>
 						<p class="p">Pelas pessoas, pelas oportunidades, pelo trabalho, pela natureza e pela vida.</p>
 					</div>
 					<div class="values-section-text-box-item">
-						<h3 class="h3">Faça o melhor que puder e nunca desista - <span>ganbatte.</span></h3>
+						<h3 class="h3">Faça o melhor que puder e nunca desista - <span
+								style="font-style: italic; font-weight: 600;">ganbatte.</span></h3>
 						<p class="p">Seja como o bambu, flexível, e sustente-se nas suas raízes nos momentos de
 							adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em
 							direção ao céu.</p>
