--- a/css/navigation.style.css
+++ b/css/navigation.style.css
@@ -78,8 +78,8 @@
     position: absolute;
     top: -1000px;
 
-    height: 300px;
-    width: 80%;
+    height: 240px;
+    width: min(80%, 300px);
     border-radius: 8px;
 
     background-image: url(/images/background_granulado.png);
