--- a/views/home2.html
+++ b/views/home2.html
@@ -128,7 +128,7 @@
 							evolução contínua como pessoas e profissionais.</p>
 					</div>
 					<div class="values-section-text-box-item">
-						<h3 class="h3">Gratidão - <span>kansha.</span style="font-style: italic; font-weight: 600;">
+						<h3 class="h3">Gratidão - <span style="font-style: italic; font-weight: 600;">kansha.</span>
 						</h3>
 						<p class="p">Pelas pessoas, pelas oportunidades, pelo trabalho, pela natureza e pela vida.</p>
 					</div>
@@ -139,12 +139,11 @@
 							adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em
 							direção ao céu.</p>
 					</div>
+					<img class="values-section-kanjis" src="../images/outros/omoiyari.png" alt="omoiyari">
+					<img class="values-section-kanjis" src="../images/outros/kintsugi.png" alt="kintsugi">
+					<img class="values-section-kanjis" src="../images/outros/kansha.png" alt="kansha">
+					<img class="values-section-kanjis" src="../images/outros/ganbatte.png" alt="ganbatte">
 				</div>
-
-				<img class="values-section-kanjis" src="../images/outros/omoiyari.png" alt="omoiyari">
-				<img class="values-section-kanjis" src="../images/outros/kansha.png" alt="kansha">
-				<img class="values-section-kanjis" src="../images/outros/kintsugi.png" alt="kintsugi">
-				<img class="values-section-kanjis" src="../images/outros/ganbatte.png" alt="ganbatte">
 			</div>
 		</section>
 	</div>
