--- a/views/home2.html
+++ b/views/home2.html
@@ -95,14 +95,19 @@
 
 					<div class="about-section-text-box">
 						<h3 class="h3">Nossa essência</h3>
-						<p class="p">Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em
-							influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande
-							influência
-							nesse processo. Visto isso, nosso escritório deseja oferecer através do design biofílico,
-							soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada
-							indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar,
-							através
-							da sustentabilidade e tecnologia.</p>
+						<div>
+							<p class="p">Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente
+								em
+								influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande
+								influência
+								nesse processo.</p>
+							<p class="p">Visto isso, nosso escritório deseja oferecer através do design biofílico,
+								soluções inteligentes que promovam uma experiência única e alinhada com a essência de
+								cada
+								indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar,
+								através
+								da sustentabilidade e tecnologia.</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -127,8 +132,8 @@
 						<p class="p">Errar é humano. Nossa missão é ressignificar o erro em aprendizado, permitindo a
 							evolução contínua como pessoas e profissionais.</p>
 					</div>
-					<div class="values-section-text-box-item">
-						<h3 class="h3">Gratidão - <span style="font-style: italic; font-weight: 600;">kansha.</span>
+					<div class="values-section-text-box-item
+						<h3 class=" h3">Gratidão - <span style="font-style: italic; font-weight: 600;">kansha.</span>
 						</h3>
 						<p class="p">Pelas pessoas, pelas oportunidades, pelo trabalho, pela natureza e pela vida.</p>
 					</div>
