--- a/views/home2.html
+++ b/views/home2.html
@@ -96,17 +96,18 @@
 					<div class="about-section-text-box">
 						<h3 class="h3">Nossa essência</h3>
 						<div>
-							<p class="p">Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente
-								em
-								influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande
-								influência
-								nesse processo.</p>
-							<p class="p">Visto isso, nosso escritório deseja oferecer através do design biofílico,
-								soluções inteligentes que promovam uma experiência única e alinhada com a essência de
-								cada
-								indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar,
-								através
-								da sustentabilidade e tecnologia.</p>
+							<p class="p">Nascida de um propósito de vida, a Yamamoto Haus acredita no <span>poder do
+									ambiente</span>
+								em influenciar nossa saúde, bem-estar e comportamento e a <span>natureza</span> é uma
+								grande
+								influência nesse processo.</p>
+							<p class="p">Visto isso, nosso escritório oferece através do <span>design biofílico</span>
+								soluções
+								inteligentes e personalizadas que promovem uma <span>experiência alinhada com a essência
+									de
+									cada indivíduo</span>, seus valores, crenças e estilo de vida, tornando a casa um
+								local que
+								promova saúde, conforto ambiental e bem-estar.</p>
 						</div>
 					</div>
 				</div>
@@ -121,25 +122,21 @@
 				<div class="values-section-text-box">
 					<h2 class="h2">Nossos valores...</h2>
 					<div class="values-section-text-box-item">
-						<h3 class="h3">Empatia, cuidado e consideração - <span
-								style="font-style: italic; font-weight: 600;">omoiyari.</span></h3>
+						<h3 class="h3">Empatia, cuidado e consideração - <span>omoiyari.</span></h3>
 						<p class="p">Cuidar do presente, das pessoas e de sí mesmo, preservar a vida, criar conexões,
 							valorizar as origens e respeitar as futuras gerações.</p>
 					</div>
 					<div class="values-section-text-box-item">
-						<h3 class="h3">Emendar com ouro - <span
-								style="font-style: italic; font-weight: 600;">kintsugi.</span></h3>
+						<h3 class="h3">Emendar com ouro - <span>kintsugi.</span></h3>
 						<p class="p">Errar é humano. Nossa missão é ressignificar o erro em aprendizado, permitindo a
 							evolução contínua como pessoas e profissionais.</p>
 					</div>
-					<div class="values-section-text-box-item
-						<h3 class=" h3">Gratidão - <span style="font-style: italic; font-weight: 600;">kansha.</span>
-						</h3>
+					<div class="values-section-text-box-item">
+						<h3 class="h3">Gratidão - <span>kansha.</span></h3>
 						<p class="p">Pelas pessoas, pelas oportunidades, pelo trabalho, pela natureza e pela vida.</p>
 					</div>
 					<div class="values-section-text-box-item">
-						<h3 class="h3">Faça o melhor que puder e nunca desista - <span
-								style="font-style: italic; font-weight: 600;">ganbatte.</span></h3>
+						<h3 class="h3">Faça o melhor que puder e nunca desista - <span>ganbatte.</span></h3>
 						<p class="p">Seja como o bambu, flexível, e sustente-se nas suas raízes nos momentos de
 							adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em
 							direção ao céu.</p>
